# design-review-env

./: .gitignore  HF_SPACES_SETUP.md  OPENENV_COMPLIANCE.md  OPENENV_DEPLOYMENT_GUIDE.md  README.md  README_SPACE.md  SPACES_README.md  TESTING_DASHBOARD.md  __init__.py  baseline_inference.py  benchmark.py  client.py  demo_agent.py  err.txt  models.py  openenv.yaml  pyproject.toml  test_complete_workflow.py  test_env.py  test_out.txt  test_output.txt  tmp_check_server.py  tmp_web_step.json
.github/workflows/: deploy-hf-spaces.yml
server/: Dockerfile  __init__.py  app.py  design_catalog.py  environment.py  grader.py  physics_engine.py  requirements.txt
static/: app.js  index.html  style.css
